bug: 26931 - fix left-most tab to align with main edge
http://bugzilla.zimbra.com/show_bug.cgi?id=26931

Copied from Perforce
 Change: 102063

--- a/WebRoot/skins/yahoo/skin.css
+++ b/WebRoot/skins/yahoo/skin.css
@@ -16,9 +16,8 @@
 	height:20px;
 }
 
-.ZAppTab						{	padding-left:3px;				}
+.ZAppTab						{	padding-right:3px;				}
 .ZAppTabBorder		 			{	border-width:0px !important;	}
-.ZmAppChooser .ZToolbarTable	{	margin-left:5px;				}
 .ZAppTabBorder .ZLeftIcon DIV	{	margin-top:4px;					}
 .BannerTextUser					{	text-align: left;				}
 .ZmAppChooser					{	margin-left:0px;				}
